tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-dot/expected.err
Error: invalid syntax: expected ',', newline, something else, or ']', found identifier 'junk'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-entry-missing-dot/input.k65:3:3 ]
   │
 3 │   junk
   │   ──┬─  
   │     ╰─── here
───╯
